--- a/notebooks/inference.ipynb
+++ b/notebooks/inference.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "6e6703d5-5fd0-415f-98b3-ee24ea096917",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "e2ff4bc2-296f-4b3b-af3d-f236512dbb0c",
    "metadata": {},
    "outputs": [],
@@ -33,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "905ef4fa-b860-485b-9855-a2dc51c49fb6",
    "metadata": {},
    "outputs": [],
@@ -75,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "987d08e2-7196-492e-aaf5-fba82fb6479a",
    "metadata": {},
    "outputs": [],
@@ -99,8 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ce98f61c-d18e-4679-ab86-78c6baf606e5",
+   "execution_count": 19,
+   "id": "f8ec3974-4f7c-4612-936b-a41b5845890f",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "id": "4359304b-1f1d-4937-adcd-fc8c2907bfbc",
    "metadata": {},
    "outputs": [],
@@ -171,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "id": "371da440-3fe2-4e32-97a1-870825c9e478",
    "metadata": {},
    "outputs": [],
@@ -183,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "c4b4bc8e-5368-400a-a4d3-862c4a369a97",
    "metadata": {},
    "outputs": [],
@@ -199,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "4286b020-4821-4f8f-beb7-7c078a99ef89",
    "metadata": {},
    "outputs": [],
@@ -209,330 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7b3bc73c-3204-434f-9e6e-3d4854b8a38e",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>event</th>\n",
-       "      <th>fighter</th>\n",
-       "      <th>opponent</th>\n",
-       "      <th>event_day</th>\n",
-       "      <th>coef1</th>\n",
-       "      <th>coef2</th>\n",
-       "      <th>left_corner_custom_feat</th>\n",
-       "      <th>height_diff_custom_feat</th>\n",
-       "      <th>reach_diff_custom_feat</th>\n",
-       "      <th>dob_diff_custom_feat</th>\n",
-       "      <th>...</th>\n",
-       "      <th>fighter_stance_custom_feat_Sideways</th>\n",
-       "      <th>fighter_stance_custom_feat_Southpaw</th>\n",
-       "      <th>fighter_stance_custom_feat_Switch</th>\n",
-       "      <th>fighter_stance_custom_feat_nan</th>\n",
-       "      <th>opponent_stance_custom_feat_Orthodox</th>\n",
-       "      <th>opponent_stance_custom_feat_Sideways</th>\n",
-       "      <th>opponent_stance_custom_feat_Southpaw</th>\n",
-       "      <th>opponent_stance_custom_feat_Switch</th>\n",
-       "      <th>opponent_stance_custom_feat_nan</th>\n",
-       "      <th>score1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>UFC Fight Night: Уиттакер - Де Риддер</td>\n",
-       "      <td>Davey Grant</td>\n",
-       "      <td>Da'Mon Blackshear</td>\n",
-       "      <td>2025-07-26</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>1.29</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>-3.0</td>\n",
-       "      <td>-105.300000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.373818</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>UFC Fight Night: Уиттакер - Де Риддер</td>\n",
-       "      <td>Amanda Ribas</td>\n",
-       "      <td>Tabatha Ricci</td>\n",
-       "      <td>2025-07-26</td>\n",
-       "      <td>1.56</td>\n",
-       "      <td>2.39</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>-18.133333</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.477805</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>UFC Fight Night: Уиттакер - Де Риддер</td>\n",
-       "      <td>Nikita Krylov</td>\n",
-       "      <td>Bogdan Guskov</td>\n",
-       "      <td>2025-07-26</td>\n",
-       "      <td>1.49</td>\n",
-       "      <td>2.60</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-6.300000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.492285</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>UFC Fight Night: Уиттакер - Де Риддер</td>\n",
-       "      <td>Shara Magomedov</td>\n",
-       "      <td>Marc-Andre Barriault</td>\n",
-       "      <td>2025-07-26</td>\n",
-       "      <td>1.13</td>\n",
-       "      <td>5.60</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>51.600000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.562864</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>UFC Fight Night: Уиттакер - Де Риддер</td>\n",
-       "      <td>Bryce Mitchell</td>\n",
-       "      <td>Said Nurmagomedov</td>\n",
-       "      <td>2025-07-26</td>\n",
-       "      <td>1.78</td>\n",
-       "      <td>2.01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>30.400000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.537164</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>UFC Fight Night: Уиттакер - Де Риддер</td>\n",
-       "      <td>Petr Yan</td>\n",
-       "      <td>Marcus McGhee</td>\n",
-       "      <td>2025-07-26</td>\n",
-       "      <td>1.24</td>\n",
-       "      <td>3.90</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>-2.0</td>\n",
-       "      <td>33.700000</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.541181</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>UFC Fight Night: Уиттакер - Де Риддер</td>\n",
-       "      <td>Robert Whittaker</td>\n",
-       "      <td>Reinier de Ridder</td>\n",
-       "      <td>2025-07-26</td>\n",
-       "      <td>1.66</td>\n",
-       "      <td>2.19</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-4</td>\n",
-       "      <td>-5.0</td>\n",
-       "      <td>3.466667</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.504246</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7 rows × 554 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                    event           fighter  \\\n",
-       "1   UFC Fight Night: Уиттакер - Де Риддер       Davey Grant   \n",
-       "3   UFC Fight Night: Уиттакер - Де Риддер      Amanda Ribas   \n",
-       "5   UFC Fight Night: Уиттакер - Де Риддер     Nikita Krylov   \n",
-       "7   UFC Fight Night: Уиттакер - Де Риддер   Shara Magomedov   \n",
-       "9   UFC Fight Night: Уиттакер - Де Риддер    Bryce Mitchell   \n",
-       "11  UFC Fight Night: Уиттакер - Де Риддер          Petr Yan   \n",
-       "13  UFC Fight Night: Уиттакер - Де Риддер  Robert Whittaker   \n",
-       "\n",
-       "                opponent   event_day  coef1  coef2  left_corner_custom_feat  \\\n",
-       "1      Da'Mon Blackshear  2025-07-26   3.50   1.29                      0.0   \n",
-       "3          Tabatha Ricci  2025-07-26   1.56   2.39                      1.0   \n",
-       "5          Bogdan Guskov  2025-07-26   1.49   2.60                      1.0   \n",
-       "7   Marc-Andre Barriault  2025-07-26   1.13   5.60                      1.0   \n",
-       "9      Said Nurmagomedov  2025-07-26   1.78   2.01                      0.0   \n",
-       "11         Marcus McGhee  2025-07-26   1.24   3.90                      1.0   \n",
-       "13     Reinier de Ridder  2025-07-26   1.66   2.19                      1.0   \n",
-       "\n",
-       "    height_diff_custom_feat  reach_diff_custom_feat  dob_diff_custom_feat  \\\n",
-       "1                        -2                    -3.0           -105.300000   \n",
-       "3                         2                     5.0            -18.133333   \n",
-       "5                         0                     1.0             -6.300000   \n",
-       "7                         1                    -1.0             51.600000   \n",
-       "9                         2                     0.0             30.400000   \n",
-       "11                       -1                    -2.0             33.700000   \n",
-       "13                       -4                    -5.0              3.466667   \n",
-       "\n",
-       "    ...  fighter_stance_custom_feat_Sideways  \\\n",
-       "1   ...                                  0.0   \n",
-       "3   ...                                  0.0   \n",
-       "5   ...                                  0.0   \n",
-       "7   ...                                  0.0   \n",
-       "9   ...                                  0.0   \n",
-       "11  ...                                  0.0   \n",
-       "13  ...                                  0.0   \n",
-       "\n",
-       "    fighter_stance_custom_feat_Southpaw  fighter_stance_custom_feat_Switch  \\\n",
-       "1                                   0.0                                0.0   \n",
-       "3                                   0.0                                0.0   \n",
-       "5                                   0.0                                0.0   \n",
-       "7                                   0.0                                0.0   \n",
-       "9                                   1.0                                0.0   \n",
-       "11                                  0.0                                1.0   \n",
-       "13                                  0.0                                0.0   \n",
-       "\n",
-       "    fighter_stance_custom_feat_nan  opponent_stance_custom_feat_Orthodox  \\\n",
-       "1                              0.0                                   0.0   \n",
-       "3                              0.0                                   1.0   \n",
-       "5                              0.0                                   1.0   \n",
-       "7                              0.0                                   1.0   \n",
-       "9                              0.0                                   1.0   \n",
-       "11                             0.0                                   1.0   \n",
-       "13                             0.0                                   0.0   \n",
-       "\n",
-       "    opponent_stance_custom_feat_Sideways  \\\n",
-       "1                                    0.0   \n",
-       "3                                    0.0   \n",
-       "5                                    0.0   \n",
-       "7                                    0.0   \n",
-       "9                                    0.0   \n",
-       "11                                   0.0   \n",
-       "13                                   0.0   \n",
-       "\n",
-       "    opponent_stance_custom_feat_Southpaw  opponent_stance_custom_feat_Switch  \\\n",
-       "1                                    0.0                                 1.0   \n",
-       "3                                    0.0                                 0.0   \n",
-       "5                                    0.0                                 0.0   \n",
-       "7                                    0.0                                 0.0   \n",
-       "9                                    0.0                                 0.0   \n",
-       "11                                   0.0                                 0.0   \n",
-       "13                                   1.0                                 0.0   \n",
-       "\n",
-       "    opponent_stance_custom_feat_nan    score1  \n",
-       "1                               0.0  0.373818  \n",
-       "3                               0.0  0.477805  \n",
-       "5                               0.0  0.492285  \n",
-       "7                               0.0  0.562864  \n",
-       "9                               0.0  0.537164  \n",
-       "11                              0.0  0.541181  \n",
-       "13                              0.0  0.504246  \n",
-       "\n",
-       "[7 rows x 554 columns]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "feat_pred_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "d08e7cb1-527f-4687-ad69-073512cd0753",
    "metadata": {},
    "outputs": [],
@@ -541,14 +227,6 @@
     "\n",
     "bet_df = place_bet(placebet_df=feat_pred_df, strategy_selection = pd.Series([True]*len(feat_pred_df), index=feat_pred_df.index), alpha=0.9)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eee275ab-34a2-49dd-ab59-0c8f580d3001",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
