--- a/notebooks/start.ipynb
+++ b/notebooks/start.ipynb
@@ -91,9 +91,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "develop_env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "develop_env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -105,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
