add_kelly_strategy

--- a/notebooks/task.ipynb
+++ b/notebooks/task.ipynb
@@ -10,20 +10,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e42411f-07c2-4e3e-8cf1-8db8a99878ea",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "cd244ab9-8a0b-426c-8bef-caec7bdf28f6",
    "metadata": {},
    "source": [
     "# TO DO\n",
     "\n",
+    "- income_all как считается проверить\n",
     "- добавить признак возраст бойца просто или до 30 инфа, так как этот индикатор должен менять зависимость между разницей в возрасте\n",
     "    - куда делся признак угла\n",
-    "    - точно разница в возрасте не должна только определять исход \n",
     "    \n",
     "- сделать так, чтобы убрать сообщение о mixed types df = pd.read_csv(conf['preprocess']['source_fights_fn'], dtype={'judges':str, 'judge1':str, 'judge2':str, 'judge3':str})\n",
     "- касательно оптимизирации будто надо f1 оптимизировать при выборе границы, но тогда не понятно, как сравнивать свою вероятность с тотализаторной, допустим thresh 0.3 у тотализатора 0.5, как считать плохие и хорошие ставки\n",
@@ -150,6 +144,23 @@
    "source": [
     "Takedown (TD)\n",
     "Knockdown (KD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b4f24d5-1fa3-4b16-84d0-11fdba46bf75",
+   "metadata": {},
+   "source": [
+    "kelly strategy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cb5c61a-10b4-4b16-8ac0-11bd042b86c4",
+   "metadata": {},
+   "source": [
+    "$f^{*}=\\frac{p\\times (b-1)-(1-p)}{b-1}$\n",
+    "\n"
    ]
   },
   {
