--- a/research/model_selection.ipynb
+++ b/research/model_selection.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "a9a71bcd-8e67-4705-82cd-39690e9c7a3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -13,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "4ff3c7ed-073b-412e-ba3c-4db77a0bcfe9",
    "metadata": {},
    "outputs": [],
@@ -24,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "da60fb4c-3a9a-4155-a5e0-381a96742e1c",
+   "execution_count": 161,
+   "id": "520ccf7f-5f82-4b31-b940-99dfa4df1311",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,24 +58,25 @@
     "from sklearn.preprocessing import RobustScaler\n",
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import HistGradientBoostingClassifier\n",
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
     "from sklearn.dummy import DummyClassifier\n",
     "from sklearn.metrics import roc_auc_score, average_precision_score\n",
-    "from sklearn.calibration import CalibratedClassifierCV, CalibrationDisplay"
+    "from sklearn.calibration import CalibratedClassifierCV, CalibrationDisplay\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
+    "\n",
+    "from src.feature_selection_funcs import BFS2Thres\n",
+    "\n",
+    "\n",
+    "conf = YAML().load(open('params.yaml'))\n",
+    "SEED=conf['seed']\n",
+    "np.random.seed(SEED)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "321a9d00-fd55-4c27-8134-be1336b27ec6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "conf = YAML().load(open('params.yaml'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "id": "2514c988-6134-48e0-a451-d2aa4825129a",
    "metadata": {},
    "outputs": [],
@@ -88,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 81,
    "id": "355a26ec-4f0c-48da-a40f-198ed38f858a",
    "metadata": {},
    "outputs": [],
@@ -98,59 +108,439 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9054a2d-3575-487c-b129-d04c5dd0df7b",
+   "id": "1f0ea24b-d0b2-48d4-abfd-08034ddea424",
    "metadata": {},
    "source": [
-    "# Logreg"
+    "# LogisticRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "c5ddd087-7d18-483b-9709-e5b076976492",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn\n",
-    "model = Pipeline(steps=[('sc', RobustScaler()), ('clf', LogisticRegression(solver='liblinear', random_state=conf['seed']))])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "f4a4cdab-8173-4e55-bdd6-88acd8d599dd",
+   "execution_count": 169,
+   "id": "01a2de67-e436-47b6-979e-5f0a84e7f880",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for idx_tr, idx_val in fake_split(df):\n",
-    "    model.fit(df.loc[idx_tr, feats], df.loc[idx_tr, 'target'])"
+    "maxiter = 1000\n",
+    "# для b значимые в начале, не меняем порядок\n",
+    "selector = BFS2Thres(Pipeline(steps=[('sc', RobustScaler()), ('clf', LogisticRegression(max_iter=maxiter, random_state=conf['seed']))]), scoring='roc_auc', cv = fake_split(df), thresh = 0.01, \n",
+    "                     direction='b')\n",
+    "selector.fit(df[feats], df['target'], verbose=False)\n",
+    " \n",
+    "feats_new = selector.feat_ar[selector.mask]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "9dd85c88-2151-4ad4-9d94-8cf58c2fa9b6",
+   "execution_count": 170,
+   "id": "e4623d91-5bf6-4a85-8d89-2583d1f5a2cf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.6505486642187126, 0.6930744679611878)"
+       "(8, 66)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 170,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "roc_auc_score(df.loc[idx_tr, 'target'], model.predict_proba(df.loc[idx_tr, feats])[:,1]), roc_auc_score(df.loc[idx_val, 'target'], model.predict_proba(df.loc[idx_val, feats])[:,1])"
+    "len(feats_new), len(feats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "d6d8e0ed-a816-443c-8595-90923d637476",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6837353958694918\n",
+      "{'clf__penalty': 'l2', 'clf__C': 5.146659592037726}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = Pipeline(steps=[('sc', RobustScaler()), ('clf', LogisticRegression(solver='liblinear', random_state=conf['seed']))])\n",
+    "\n",
+    "params_d = {'clf__C':np.logspace(start=-10, stop=7, num=100, base=2), 'clf__penalty':['l1', 'l2']}\n",
+    "\n",
+    "gr_s = RandomizedSearchCV(model, param_distributions=params_d, n_iter=100, scoring='roc_auc', cv=fake_split(df), random_state=SEED)\n",
+    "gr_s.fit(df[feats_new], df['target'])\n",
+    "\n",
+    "print(gr_s.best_score_), print(gr_s.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "11245816-e3e2-486a-9e11-5b4996d980b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6286376953124999, 0.6837353958694918)"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = gr_s.best_estimator_\n",
+    "for idx_tr, idx_val in fake_split(df):\n",
+    "    model.fit(df.loc[idx_tr, feats_new], df.loc[idx_tr, 'target'])\n",
+    "\n",
+    "roc_auc_score(df.loc[idx_tr, 'target'], model.predict_proba(df.loc[idx_tr, feats_new])[:,1]), roc_auc_score(df.loc[idx_val, 'target'], model.predict_proba(df.loc[idx_val, feats_new])[:,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6292bd6-cb4d-4da1-829d-ed38ebb4a594",
+   "metadata": {},
+   "source": [
+    "# HistGradientBoostingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "d00d3275-70ef-416c-ad35-15335de36726",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# для b значимые в начале, не меняем порядок\n",
+    "selector = BFS2Thres(HistGradientBoostingClassifier(random_state=SEED), scoring='roc_auc', cv = fake_split(df), thresh = 0.02, \n",
+    "                     direction='b')\n",
+    "\n",
+    "selector.fit(df[feats], df['target'], verbose=False)\n",
+    " \n",
+    "feats_new = selector.feat_ar[selector.mask]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "a8c775ef-5b8a-481c-92ad-5150aab040bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 66)"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(feats_new), len(feats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "87993d71-cf5b-4eca-a8b9-a0b807c076ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6417954781069086\n",
+      "{'min_samples_leaf': 9, 'max_iter': 50, 'max_features': 0.9, 'max_depth': 10, 'learning_rate': 0.01, 'l2_regularization': 0.0001}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = HistGradientBoostingClassifier(random_state=SEED)\n",
+    "\n",
+    "params_d = {'max_depth':[3, 5, 7, 10,14], 'learning_rate': [1e-4, 1e-3,1e-2, 1e-1], 'l2_regularization': [1e-4, 1e-3,1e-2, 1e-1],\n",
+    "            'max_iter':np.arange(50, 350, 50), 'min_samples_leaf':np.arange(1, 10, 1), 'max_features': [0.7, 0.8, 0.9]}\n",
+    "\n",
+    "\n",
+    "gr_s = RandomizedSearchCV(model, param_distributions=params_d, n_iter=100, scoring='roc_auc', cv=fake_split(df), random_state=SEED)\n",
+    "gr_s.fit(df[feats_new], df['target'])\n",
+    "\n",
+    "print(gr_s.best_score_), print(gr_s.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "42cfdd79-b502-4f61-8997-ecd8e953a07b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7490540907118056, 0.6417954781069086)"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = gr_s.best_estimator_\n",
+    "for idx_tr, idx_val in fake_split(df):\n",
+    "    model.fit(df.loc[idx_tr, feats_new], df.loc[idx_tr, 'target'])\n",
+    "\n",
+    "roc_auc_score(df.loc[idx_tr, 'target'], model.predict_proba(df.loc[idx_tr, feats_new])[:,1]), roc_auc_score(df.loc[idx_val, 'target'], model.predict_proba(df.loc[idx_val, feats_new])[:,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "638d3d0b-51c8-4198-8467-e3ebd7ce2f8c",
+   "metadata": {},
+   "source": [
+    "# Tree"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f29d57fe-ea30-4883-a425-34123aa32df3",
+   "id": "7646f574-3d11-4fa0-a38d-4b85defb0742",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# для b значимые в начале, не меняем порядок\n",
+    "selector = BFS2Thres(HistGradientBoostingClassifier(random_state=SEED), scoring='roc_auc', cv = fake_split(df), thresh = 0.02, \n",
+    "                     direction='b')\n",
+    "\n",
+    "selector.fit(df[feats], df['target'], verbose=False)\n",
+    " \n",
+    "feats_new = selector.feat_ar[selector.mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f8723cb-9ebb-47a9-8a82-5ce641a397ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = [{'reg':[DecisionTreeClassifier()], 'reg__max_depth':[3, 5, 7,10,14]},\n",
+    "          {'reg':[RandomForestClassifier(),ExtraTreesClassifier()],\n",
+    "           'reg__max_depth':[3, 5, 7, 10,14], 'reg__n_estimators':np.arange(50,500,10),\n",
+    "           'reg__min_samples_leaf':[1,2,3,4]},\n",
+    "         ]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cc52351-e21d-450a-93bd-2d6c3044426f",
+   "metadata": {},
+   "source": [
+    "# LinearSVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "a06ea0ca-9457-44a7-bd38-ff8fcb9016ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxiter = 1000\n",
+    "# для b значимые в начале, не меняем порядок\n",
+    "\n",
+    "selector = BFS2Thres(Pipeline(steps=[('sc', RobustScaler()), ('clf', LinearSVC(max_iter=maxiter*10, random_state=SEED))]), scoring='roc_auc', cv = fake_split(df), thresh = 0.001, \n",
+    "                     direction='b')\n",
+    "selector.fit(df[feats], df['target'], verbose=False)\n",
+    " \n",
+    "feats_new = selector.feat_ar[selector.mask]\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "ebe4e2e2-5a11-44de-9160-cdee7ff24f51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(29, 66)"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(feats_new), len(feats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "2292a7ab-bf9c-469f-b6db-85d8aff9cebe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7204888816410209\n",
+      "{'clf__penalty': 'l2', 'clf__C': 13.812272411144424}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = Pipeline(steps=[('sc', RobustScaler()), ('clf', LinearSVC(max_iter=maxiter*10, random_state=SEED))])\n",
+    "\n",
+    "params_d = {'clf__C':np.logspace(start=-10, stop=5, num=100, base=2), 'clf__penalty':['l1', 'l2']}\n",
+    "\n",
+    "gr_s = RandomizedSearchCV(model, param_distributions=params_d, n_iter=100, scoring='roc_auc', cv=fake_split(df), random_state=SEED)\n",
+    "gr_s.fit(df[feats_new], df['target'])\n",
+    "\n",
+    "print(gr_s.best_score_), print(gr_s.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "522b979e-2bec-4f72-ba65-3cca79730460",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6611268446180556, 0.7204684970121957)"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = CalibratedClassifierCV(estimator=Pipeline(steps=[('sc', RobustScaler()), ('clf', LinearSVC(max_iter=maxiter*10, random_state=SEED))]), method='sigmoid', cv=5, n_jobs=-1, ensemble=False)\n",
+    "for idx_tr, idx_val in fake_split(df):\n",
+    "    model.fit(df.loc[idx_tr, feats_new], df.loc[idx_tr, 'target'])\n",
+    "\n",
+    "roc_auc_score(df.loc[idx_tr, 'target'], model.predict_proba(df.loc[idx_tr, feats_new])[:,1]), roc_auc_score(df.loc[idx_val, 'target'], model.predict_proba(df.loc[idx_val, feats_new])[:,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bc2e716-2ae9-4eec-8540-0930a1ab1198",
+   "metadata": {},
+   "source": [
+    "# GaussianNB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "1e14daaa-894e-4821-9cfe-c8b31cf2c57b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxiter = 1000\n",
+    "# для b значимые в начале, не меняем порядок\n",
+    "selector = BFS2Thres(Pipeline(steps=[('sc', RobustScaler()), ('clf', GaussianNB())]), scoring='roc_auc', cv = fake_split(df), thresh = 0.01, \n",
+    "                     direction='b')\n",
+    "\n",
+    "selector.fit(df[feats], df['target'], verbose=False)\n",
+    "\n",
+    "feats_new = selector.feat_ar[selector.mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "e597340b-742a-43fa-a15e-07f193c86f72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 66)"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(feats_new), len(feats)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "0db230f1-78c4-4b44-be37-105e34f548f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.6959461805555556, 0.6436970727673008)"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = Pipeline(steps=[('sc', RobustScaler()), ('clf', GaussianNB())])\n",
+    "for idx_tr, idx_val in fake_split(df):\n",
+    "    model.fit(df.loc[idx_tr, feats_new], df.loc[idx_tr, 'target'])\n",
+    "\n",
+    "roc_auc_score(df.loc[idx_tr, 'target'], model.predict_proba(df.loc[idx_tr, feats_new])[:,1]), roc_auc_score(df.loc[idx_val, 'target'], model.predict_proba(df.loc[idx_val, feats_new])[:,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a8f257c-925e-4809-b196-b3b42baa3977",
    "metadata": {},
    "outputs": [],
    "source": []
